--- a/v1.2
+++ b/v1.2
@@ -1,27 +1,28 @@
 local Library = loadstring(game:HttpGet("https://raw.githubusercontent.com/xHeptc/Kavo-UI-Library/main/source.lua"))()
 local Window = Library.CreateLib("Crimson Project 2", "Serpent")
-
-local field2farm = "Sunflower Field"
---[Bamboo Field, Spider Field, Hub Field, Strawberry Field, Coconut Field, Pine Tree Forest, Mountain Top Field, Dandelion Field, Stump Field, Pineapple Field, Pumpkin Field, Blue Flower Field, Sunflower Field, Ant Field, Mushroom Field, Cactus Field, Clover Field, Rose Field, Pepper Field]
-    local tweenspeed = 8
-
-
+local tweenspeed = 5
 local Tab = Window:NewTab("Auto Farm")
 local Section = Tab:NewSection("Auto Farm")
 
+Fields = {"Bamboo Field","Spider Field","Hub Field","Strawberry Field","Coconut Field","Pine Tree Forest","Mountain Top Field","Dandelion Field","Stump Field","Pineapple Field","Pumpkin Field","Blue Flower Field","Sunflower Field","Ant Field","Mushroom Field","Cactus Field","Clover Field","Rose Field","Pepper Field"}
+
+Section:NewDropdown("Field to farm", "Select", Fields, function(Farmlands)
+    Farmland = Farmlands
+end)
+
 Section:NewToggle("Show your Hitbox", " ", function(state)
     if state then
-        Hitbox = state
-while Hitbox == true do
+    _G.Hitbox = state
+if _G.Hitbox == true then
 wait()
 local backupsize = game.Players.LocalPlayer.Character.HumanoidRootPart.Size
 game.Players.LocalPlayer.Character.HumanoidRootPart.CanCollide = false
 game.Players.LocalPlayer.Character.HumanoidRootPart.Transparency = 0.3
-game.Players.LocalPlayer.Character.HumanoidRootPart.Size = Vector3.new(50, 2, 50)
+game.Players.LocalPlayer.Character.HumanoidRootPart.Size = Vector3.new(80, 0.1, 80)
 end
     else
-        Hitbox = state
-while Hitbox == false do
+        _G.Hitbox = state
+if _G.Hitbox == false then
 wait()
 game.Players.LocalPlayer.Character.HumanoidRootPart.Transparency = 1
 game.Players.LocalPlayer.Character.HumanoidRootPart.Size = backupsize
@@ -36,8 +37,10 @@ Section:NewToggle("Auto Dig", "Auto Dig", function(state)
 while AutoDig == true do
 wait()
 
-if state == true then IN1() end
-
+if state == true then
+wait(0.1)
+game:GetService("ReplicatedStorage"):WaitForChild("Events"):WaitForChild("ToolCollect"):FireServer()
+end
 end
     else
         AutoDig = state
@@ -48,43 +51,36 @@ end)
 Section:NewToggle("Farm Token", " ", function(state)
 
     if state then
-        afarm = state
-while afarm == true do
+        _G.afarm = state
+while _G.afarm == true do
 wait()
 IN2()
+IN3()
 end
     else
-        afarm = state
+        _G.afarm = state
 end
 end)
 
 Section:NewToggle("Anti Leave Field", " ", function(state)
 
     if state then
-        anfarm = state
-while anfarm == true do
+        _G.anfarm = state
+while _G.anfarm == true do
 wait()
-
-if state == true then 
 IN3()
 end
-end
     else
-        anfarm = state
+        _G.anfarm = state
 end
 end)
-
-function IN1()
-    wait(0.1)
-    game:GetService("ReplicatedStorage"):WaitForChild("Events"):WaitForChild("ToolCollect"):FireServer()
-end
 
 function IN2()
 local TweenService = game:GetService("TweenService")
 local player = game.Players.LocalPlayer
-local character = player.Character or player.CharacterAdded:Wait()
-local humanoidRootPart = character:WaitForChild("HumanoidRootPart")
-local hitboxSize = Vector3.new(50, 10, 50)
+local character = player.Character
+local humanoidRootPart = character.HumanoidRootPart
+local hitboxSize = Vector3.new(80, 10, 80)
 
     local partsInWorkspace = workspace.Collectibles:GetDescendants()
 
@@ -98,7 +94,6 @@ local hitboxSize = Vector3.new(50, 10, 50)
                 local humanoid = character:WaitForChild("Humanoid")
                 humanoid:MoveTo(part.Position)
                 humanoid.MoveToFinished:Wait()
-                print("Player has reached Part C at position: ", part.Position)
         IN3()
             end
         end
@@ -108,25 +103,20 @@ end
 function IN3()
 local TweenService = game:GetService("TweenService")
 local player = game.Players.LocalPlayer
-local character = player.Character or player.CharacterAdded:Wait()
-local humanoidRootPart = character:WaitForChild("HumanoidRootPart")
-    local zone = workspace.FlowerZones[field2farm]
+local character = player.Character
+local humanoidRootPart = character.HumanoidRootPart
+    local zone = workspace.FlowerZones[Farmland]
     local zoneCenter = zone.Position
     local zoneSize = zone.Size
-
     local minBound = zone.Position - zone.Size / 2
     local maxBound = zone.Position + zone.Size / 2
-
     if humanoidRootPart.Position.X < minBound.X or humanoidRootPart.Position.X > maxBound.X
     or humanoidRootPart.Position.Z < minBound.Z or humanoidRootPart.Position.Z > maxBound.Z then
-
         local goalCFrame = CFrame.new(zoneCenter)
         local tweenInfo = TweenInfo.new(tweenspeed, Enum.EasingStyle.Quad, Enum.EasingDirection.Out)
         local tween = TweenService:Create(humanoidRootPart, tweenInfo, {CFrame = goalCFrame})
         tween:Play()
-        tween.Completed:Wait()
-
+        tween.Completed:Wait()  
         IN2()
     end
 end
-
