Update and rename v1.4 to v1.5

--- a/v1.5
+++ b/v1.5
@@ -1,16 +1,9 @@
+loadstring(game:HttpGet("https://raw.githubusercontent.com/Oak4Blood/stunning-computing-machine/refs/heads/main/NoAfk"))()
 local Library = loadstring(game:HttpGet("https://raw.githubusercontent.com/xHeptc/Kavo-UI-Library/main/source.lua"))()
 local Window = Library.CreateLib("Crimson Project 2", "Serpent")
 local tweenspeed = 5
 local Tab = Window:NewTab("Auto Farm")
 local Section = Tab:NewSection("Auto Farm")
-
-local bb = game:service('VirtualUser')
-
-game:service('Players').LocalPlayer.Idled:connect(function()
-    bb:CaptureController()
-    bb:ClickButton2(Vector2.new())
-    print("Anti Afk Action")
-end)
 
 Fields = {"Bamboo Field","Spider Field","Hub Field","Strawberry Field","Coconut Field","Pine Tree Forest","Mountain Top Field","Dandelion Field","Stump Field","Pineapple Field","Pumpkin Field","Blue Flower Field","Sunflower Field","Ant Field","Mushroom Field","Cactus Field","Clover Field","Rose Field","Pepper Field"}
 
@@ -19,9 +12,9 @@ Section:NewDropdown("Field to farm", "Select", Fields, function(Farmlands)
 end)
 
 Section:NewButton("Delete Teleport", "ButtonInfo", function()
-    local tpa = workspace.Map.Ground.Campsite
+    local tpa = workspace.HiveHub.TradeHubMap
     for i,v in pairs(tpa:GetDescendants()) do
-        if v.Name == "TradeHubPortalPart" then
+        if v.Name == "GateLow" then
             v:Destroy()
         end
     end
