--- a/v1.6
+++ b/v1.6
@@ -7,38 +7,37 @@ local Section = Tab:NewSection("Auto Farm")
 
 Fields = {"Bamboo Field","Spider Field","Hub Field","Strawberry Field","Coconut Field","Pine Tree Forest","Mountain Top Field","Dandelion Field","Stump Field","Pineapple Field","Pumpkin Field","Blue Flower Field","Sunflower Field","Ant Field","Mushroom Field","Cactus Field","Clover Field","Rose Field","Pepper Field"}
 
-_G.in2Active = true
-_G.in3Active = true
-_G.randomwalkActive = true
-
 Section:NewDropdown("Field to farm", "Select", Fields, function(Farmlands)
     Farmland = Farmlands
 end)
 
-Section:NewToggle("Auto Convert", "Auto Convert", function(state)
-    if state then
-        Autoconv = state
-        while Autoconv == true do
-            wait(1)
-            local player = game.Players.LocalPlayer
-            local pollen = player.CoreStats.Pollen.Value
-            local capacity = player.CoreStats.Capacity.Value
-
-            if pollen >= capacity then
-                print("max cap")
-                _G.in2Active = false
-                _G.in3Active = false
-                _G.randomwalkActive = false
-            elseif pollen == 0 then
-                _G.in2Active = true
-                _G.in3Active = true
-                _G.randomwalkActive = true
-            end
+Section:NewButton("Delete Teleport", "ButtonInfo", function()
+    local tpa = workspace.HiveHub.TradeHubMap
+    for i,v in pairs(tpa:GetDescendants()) do
+        if v.Name == "GateLow" then
+            v:Destroy()
         end
-    else
-        Autoconv = state
-        wait()
     end
+end)
+
+Section:NewToggle("Show your Hitbox", " ", function(state)
+    if state then
+    _G.Hitbox = state
+if _G.Hitbox == true then
+wait()
+local backupsize = game.Players.LocalPlayer.Character.HumanoidRootPart.Size
+game.Players.LocalPlayer.Character.HumanoidRootPart.CanCollide = false
+game.Players.LocalPlayer.Character.HumanoidRootPart.Transparency = 0.3
+game.Players.LocalPlayer.Character.HumanoidRootPart.Size = Vector3.new(80, 0.1, 80)
+end
+    else
+        _G.Hitbox = state
+if _G.Hitbox == false then
+wait()
+game.Players.LocalPlayer.Character.HumanoidRootPart.Transparency = 1
+game.Players.LocalPlayer.Character.HumanoidRootPart.Size = backupsize
+end
+end
 end)
 
 Section:NewToggle("Auto Dig", "Auto Dig", function(state)
@@ -103,7 +102,6 @@ end
 end)
 
 function IN2()
-if _G.in2Active == false then return end
 local TweenService = game:GetService("TweenService")
 local player = game.Players.LocalPlayer
 local character = player.Character
@@ -130,51 +128,49 @@ local hitboxSize = Vector3.new(80, 10, 80)
 end
 
 function IN3()
-if _G.in3Active == false then return end
 local TweenService = game:GetService("TweenService")
 local player = game.Players.LocalPlayer
 local character = player.Character
 local humanoidRootPart = character.HumanoidRootPart
-local zone = workspace.FlowerZones[Farmland]
-local zoneCenter = zone.Position
-local zoneSize = zone.Size
-local minBound = zone.Position - zone.Size / 2
-local maxBound = zone.Position + zone.Size / 2
-if humanoidRootPart.Position.X < minBound.X or humanoidRootPart.Position.X > maxBound.X
-or humanoidRootPart.Position.Z < minBound.Z or humanoidRootPart.Position.Z > maxBound.Z then
-    local goalCFrame = CFrame.new(zoneCenter) * CFrame.new(0, 4, 0)
-    local currentPosition = humanoidRootPart.Position
-    local targetPosition = zoneCenter + Vector3.new(0, 4, 0)
-    local distance = (currentPosition - targetPosition).Magnitude
-    local tweenTime = distance / tweenspeed
-    local tweenInfo = TweenInfo.new(tweenTime, Enum.EasingStyle.Quad, Enum.EasingDirection.Out)
-    local tween = TweenService:Create(humanoidRootPart, tweenInfo, {CFrame = goalCFrame})
-    tween:Play()
-    tween.Completed:Wait()
-    IN2()
-end
+    local zone = workspace.FlowerZones[Farmland]
+    local zoneCenter = zone.Position
+    local zoneSize = zone.Size
+    local minBound = zone.Position - zone.Size / 2
+    local maxBound = zone.Position + zone.Size / 2
+    if humanoidRootPart.Position.X < minBound.X or humanoidRootPart.Position.X > maxBound.X
+    or humanoidRootPart.Position.Z < minBound.Z or humanoidRootPart.Position.Z > maxBound.Z then
+        local goalCFrame = CFrame.new(zoneCenter)
+        local tweenInfo = TweenInfo.new(tweenspeed, Enum.EasingStyle.Quad, Enum.EasingDirection.Out)
+        local tween = TweenService:Create(humanoidRootPart, tweenInfo, {CFrame = goalCFrame})
+        tween:Play()
+        tween.Completed:Wait()  
+        IN2()
+    end
 end
 
-function walkRandomlyInField()
-    while _G.randomwalkActive == true do
-        wait()
-        if _G.randomwalkActive == false then
-            break
-        end
-        local field = workspace.FlowerZones[Farmland]
-        local fieldCenter = field.Position
-        local fieldSize = field.Size
-        local minBound = fieldCenter - fieldSize / 2
-        local maxBound = fieldCenter + fieldSize / 2
-        local randomX = math.random(minBound.X, maxBound.X)
-        local randomZ = math.random(minBound.Z, maxBound.Z)
-        local randomY = fieldCenter.Y
-        local targetPosition = Vector3.new(randomX, randomY, randomZ)
+local function getRandomPositionInField()
+   
+local field = workspace.FlowerZones[Farmland]
+local fieldCenter = field.Position
+local fieldSize = field.Size
+local minBound = fieldCenter - fieldSize / 2
+local maxBound = fieldCenter + fieldSize / 2
+    local randomX = math.random(minBound.X, maxBound.X)
+    local randomZ = math.random(minBound.Z, maxBound.Z)
+    local randomY = fieldCenter.Y
+    return Vector3.new(randomX, randomY, randomZ)
+end
+
+function walkRandomly()
+    while true do
+wait()
         local player = game.Players.LocalPlayer
         local character = player.Character or player.CharacterAdded:Wait()
         local humanoid = character:WaitForChild("Humanoid")
+        local humanoidRootPart = character:WaitForChild("HumanoidRootPart")
+        local targetPosition = getRandomPositionInField()
         humanoid:MoveTo(targetPosition)
         humanoid.MoveToFinished:Wait()
-        wait(math.random(1, 6))
+        wait(math.random(1, 5))
     end
 end
